--- a/i18n/locales/ja.json
+++ b/i18n/locales/ja.json
@@ -70,7 +70,13 @@
   },
   "modelTesting": {
     "title": "MCPベース自動化ML/AIエンジン",
-    "pipeline": "5段階ML/AIパイプライン",
+    "pipeline": "Model Context Protocolを活用した知的エージェントベース機械学習パイプライン自動化システム",
+    "agentStatus": "MCPエージェント状態",
+    "currentTask": "現在のタスク",
+    "dataCollection": "データ収集",
+    "progress": "進捗",
+    "complete": "完了",
+    "startPipeline": "パイプライン開始",
     "step1": "ステップ1：自動データ精製",
     "step2": "ステップ2：時系列データラベリング",
     "step3": "ステップ3：予測モデル選択・訓練",
