--- a/i18n/locales/zh.json
+++ b/i18n/locales/zh.json
@@ -70,7 +70,13 @@
   },
   "modelTesting": {
     "title": "基于MCP的自动化ML/AI引擎",
-    "pipeline": "5步ML/AI管道",
+    "pipeline": "利用模型上下文协议的智能代理机器学习管道自动化系统",
+    "agentStatus": "MCP代理状态",
+    "currentTask": "当前任务",
+    "dataCollection": "数据收集",
+    "progress": "进度",
+    "complete": "完成",
+    "startPipeline": "启动管道",
     "step1": "步骤1：自动数据精炼",
     "step2": "步骤2：时间序列数据标记",
     "step3": "步骤3：预测模型选择与训练",
