--- a/i18n/locales/ko.json
+++ b/i18n/locales/ko.json
@@ -70,7 +70,13 @@
   },
   "modelTesting": {
     "title": "MCP 기반 자동화 ML/AI 엔진",
-    "pipeline": "5단계 ML/AI 파이프라인",
+    "pipeline": "Model Context Protocol을 활용한 지능형 에이전트 기반 머신러닝 파이프라인 자동화 시스템",
+    "agentStatus": "MCP 에이전트 상태",
+    "currentTask": "현재 작업",
+    "dataCollection": "데이터 수집",
+    "progress": "진행률",
+    "complete": "완료",
+    "startPipeline": "파이프라인 시작",
     "step1": "1단계: 자동 데이터 정제",
     "step2": "2단계: 시계열 데이터 라벨링",
     "step3": "3단계: 예측 모델 선택 및 훈련",
