--- a/i18n/locales/ko.json
+++ b/i18n/locales/ko.json
@@ -229,5 +229,155 @@
     "english": "English", 
     "japanese": "日本語",
     "chinese": "中文"
+  },
+  "crewai": {
+    "title": "CrewAI 전문화된 에이전트 팀",
+    "subtitle": "전문화된 에이전트 팀을 통한 자동화된 에너지 관리",
+    "description": "MCP 서버 기능을 전문화된 에이전트 팀으로 분해하여 이벤트 기반 자동화 시스템 구축",
+    "crewStatusOverview": "크루 상태 개요",
+    "workflowControl": "워크플로우 제어",
+    "systemMetrics": "시스템 메트릭",
+    "activeCrews": "활성 크루",
+    "eventsProcessed": "처리된 이벤트",
+    "successRate": "성공률",
+    "avgResponseTime": "평균 응답 시간",
+    "workflowType": "워크플로우 타입",
+    "triggerEvent": "트리거 이벤트",
+    "startWorkflow": "워크플로우 시작",
+    "pauseWorkflow": "워크플로우 일시정지",
+    "stopWorkflow": "워크플로우 중지",
+    "sequentialWorkflow": "순차 워크플로우",
+    "parallelWorkflow": "병렬 워크플로우",
+    "hybridWorkflow": "하이브리드 워크플로우",
+    "optionalTriggerEvent": "선택적 트리거 이벤트",
+    "dataIngestionCrew": {
+      "title": "데이터 수집 크루",
+      "role": "센서/기상/발전/배터리/요금 데이터 수집·정제·스키마 검증",
+      "tools": "MCP 외부데이터/날씨 도구, HTTP/API 래퍼, Health/API 상태 체크",
+      "currentTask": "실시간 센서 데이터 수집",
+      "status": "15개 소스에서 데이터 수집 중"
+    },
+    "forecastingCrew": {
+      "title": "예측 및 기후 크루",
+      "role": "단기/중기 수요·발전 시계열 예측, 기후 Nowcasting 연계",
+      "tools": "모델 비교/AutoML 파이프라인, XGBoost/LGBM/RF/NN 모델",
+      "currentTask": "24시간 에너지 수요 예측",
+      "status": "모델 정확도: 94.2%"
+    },
+    "anomalyCrew": {
+      "title": "이상 탐지 및 품질 크루",
+      "role": "데이터 품질/예측 오차/장비 이상 탐지, 경보 임계치 동적 조정",
+      "tools": "이상치 탐지·품질 리포트 루틴, 5분 주기 모니터링",
+      "currentTask": "실시간 이상 탐지",
+      "status": "3개 이상 탐지됨"
+    },
+    "demandControlCrew": {
+      "title": "수요 대응 및 제어 크루",
+      "role": "수요-공급 매칭율/피크 억제/부하전환 시뮬레이션, 제어 권고·명령 생성",
+      "tools": "수요 제어/시뮬레이션/매칭율 대시보드, 운영 정책 옵션화",
+      "currentTask": "수요-공급 매칭 최적화",
+      "status": "매칭율: 96.8%"
+    },
+    "reportingCrew": {
+      "title": "LLM-SLM 운영 및 리포팅 크루",
+      "role": "운영 리포트 생성, 요약/설명, 자연어 질의 응답, LLM-SLM 개발보드 연동",
+      "tools": "모델 거버넌스(배포/롤백) 자동화, 학습률/진행률/버전 관리",
+      "currentTask": "일일 운영 리포트 생성",
+      "modelStatus": "EnergySLM-v2.1 (훈련: 65%)",
+      "status": "리포트 생성 진행 중"
+    },
+    "eventLog": "이벤트 로그",
+    "dataIngestion": "데이터 수집",
+    "forecasting": "예측",
+    "anomalyDetection": "이상 탐지",
+    "demandControl": "수요 제어",
+    "reporting": "리포팅",
+    "orchestrator": "오케스트레이터",
+    "active": "활성",
+    "role": "역할",
+    "tools": "도구",
+    "currentTask": "현재 작업",
+    "status": "상태",
+    "modelStatus": "모델 상태",
+    "safetyControls": {
+      "title": "워크플로 실행 안전장치",
+      "humanApproval": "Human-in-the-Loop 승인",
+      "simulationSnapshot": "시뮬레이션 결과 스냅샷",
+      "policySelection": "정책 선택",
+      "costImpact": "예상 비용 영향",
+      "emissionImpact": "온실가스 영향",
+      "comfortImpact": "쾌적도 영향",
+      "approveControl": "제어 명령 승인",
+      "rejectControl": "제어 명령 거부",
+      "simulationResults": "시뮬레이션 결과",
+      "versionInfo": "버전 정보"
+    },
+    "reliabilityGuards": {
+      "title": "신뢰도·품질 가드레일",
+      "accuracyThreshold": "정확도 임계치",
+      "fallbackModel": "폴백 모델",
+      "ruleBasedControl": "룰베이스 제어",
+      "autoFallback": "자동 폴백",
+      "manualFallback": "수동 폴백",
+      "errorBoundary": "에러 바운더리",
+      "retryPolicy": "재시도 정책",
+      "backoffStrategy": "백오프 전략",
+      "circuitBreaker": "서킷브레이커",
+      "healthCheck": "헬스체크"
+    },
+    "observability": {
+      "title": "관측성 확장",
+      "traceId": "추적 ID",
+      "deadLetterQueue": "Dead-letter Queue",
+      "replay": "재실행",
+      "inputOutputSamples": "입·출력 샘플",
+      "taskTracking": "태스크 단위 추적",
+      "filterByCrew": "크루별 필터",
+      "filterByTime": "시간별 필터",
+      "filterByStatus": "상태별 필터",
+      "pagination": "페이징",
+      "csvExport": "CSV 내보내기",
+      "operationalReport": "운영 보고서"
+    },
+    "governance": {
+      "title": "거버넌스",
+      "modelVersioning": "모델 버전 관리",
+      "shadowDeployment": "Shadow 배포",
+      "canaryDeployment": "Canary 배포",
+      "abTesting": "A/B 테스트",
+      "performanceComparison": "성능 비교",
+      "errorCost": "오류 비용",
+      "energyCost": "에너지 비용",
+      "rollback": "롤백",
+      "releaseNotes": "릴리즈 노트",
+      "approvalWorkflow": "승인 워크플로",
+      "pmApproval": "PM 승인",
+      "opsApproval": "운영팀 승인"
+    },
+    "security": {
+      "title": "권한/감사",
+      "rbac": "RBAC (역할 기반 접근 제어)",
+      "readPermission": "읽기 권한",
+      "simulationPermission": "시뮬레이션 권한",
+      "applyPermission": "적용 권한",
+      "auditLog": "감사 로그",
+      "whoApproved": "누가 승인했는가",
+      "whenApproved": "언제 승인했는가",
+      "whatApproved": "무엇을 승인했는가",
+      "transparency": "투명성",
+      "accessControl": "접근 제어"
+    },
+    "dataFreshness": {
+      "title": "데이터 신선도",
+      "lastUpdate": "마지막 업데이트",
+      "ingestionWatermark": "수집 워터마크",
+      "timezone": "타임존",
+      "kst": "KST",
+      "local": "로컬",
+      "realtime": "실시간",
+      "delayed": "지연",
+      "dataAge": "데이터 연령",
+      "freshnessIndicator": "신선도 지표"
+    }
   }
 }
