feat: Enhance Health page with comprehensive improvements
- Fix uptime calculation with proper date and multilingual support
- Add animated status indicators with color-coded pulse effects
- Implement system metrics monitoring (CPU, Memory, Response Time, Active Connections)
- Add real-time data refresh functionality with spinning animation
- Include tooltips for system status cards with detailed information
- Enhance user experience with floating refresh button
- Complete multilingual support for all new system metrics
- Add API testing capabilities and error handling
- Improve visual feedback with modern animations and transitions

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -414,6 +414,17 @@
       "lastUpdate": "Last Update:",
       "link": "Statistics Page"
     },
+    "systemMetrics": {
+      "title": "System Metrics",
+      "cpuUsage": "CPU Usage",
+      "memoryUsage": "Memory Usage",
+      "responseTime": "Response Time",
+      "activeConnections": "Active Connections",
+      "currentCpuUsage": "Current CPU Usage",
+      "currentMemoryUsage": "Current Memory Usage",
+      "avgApiResponseTime": "Average API Response Time",
+      "currentActiveConnections": "Current Active Connections"
+    },
     "realTimeEventCapture": {
       "title": "Real-time Event Capture",
       "description": "Track all user interactions such as clicks, scrolls, and form submissions in real-time.",
