--- a/i18n/locales/ko.json
+++ b/i18n/locales/ko.json
@@ -20,20 +20,44 @@
     "essGeneration": "ESS 발전",
     "systemEfficiency": "시스템 효율",
     "supplyGrowth": "공급 증가율",
-    "weatherAnalysis": "고급 기상 분석",
+    "weatherAnalysis": "고급 날씨 분석 시스템",
     "temperature": "온도",
     "humidity": "습도",
     "windSpeed": "풍속",
-    "solarIrradiance": "일사량",
+    "solarIrradiance": "태양 복사 강도",
     "precipitation": "강수량",
     "visibility": "가시거리",
-    "energyWeatherCorrelation": "에너지-기상 상관관계",
-    "weatherImpact": "기상 영향 분석",
+    "energyWeatherCorrelation": "에너지-날씨 상관관계",
+    "weatherImpact": "날씨 영향 분석",
     "supplyPrediction": "에너지 공급 예측 분석",
     "prediction1h": "1시간 후 예측",
     "prediction6h": "6시간 후 예측", 
     "prediction24h": "24시간 후 예측",
-    "predictionAccuracy": "예측 정확도"
+    "predictionAccuracy": "예측 정확도",
+    "advancedWeatherAnalysis": "고급 날씨 분석 시스템",
+    "energyGenerationTrends": "에너지 생산 추이",
+    "weatherConditions": "날씨 조건",
+    "energyMixDistribution": "에너지 믹스 분포",
+    "systemStatusMonitoring": "시스템 상태 모니터링",
+    "solarPanelArray": "태양광 패널 어레이",
+    "energyStorageSystem": "에너지 저장 시스템",
+    "weatherSensors": "날씨 센서",
+    "weatherForecast": "날씨 예보",
+    "energyGenerationPrediction": "에너지 생산 예측",
+    "online": "온라인",
+    "offline": "오프라인",
+    "maintenance": "정비 중",
+    "lastUpdate": "마지막 업데이트",
+    "autoRefresh": "자동 새로고침",
+    "refresh": "새로고침",
+    "solarVsIrradiance": "태양광 vs 복사강도",
+    "essVsEfficiency": "ESS vs 효율",
+    "efficiencyVsTemperature": "효율 vs 온도",
+    "correlation": "상관계수",
+    "batteryBank": "배터리 뱅크",
+    "inverterSystem": "인버터 시스템",
+    "panel": "패널",
+    "turbine": "터빈"
   },
   "energyDemand": {
     "title": "에너지 수요 분석 및 예측 대시보드",
